1999-06-10  Hippo

	* fvwm/{{colors,fvwm,icons}.c,screen.h}: clean up of icon rendering:
	removed Bool usingDefaultVisual & GC IconPixmapGC,
	client supplied icon bitmaps are always drawn in correct colors,
	client supplied icon pixmaps have no relief when fvwm is using a
	non-default visual.

1999-06-10  Chris Rankin  <rankinc@zipworld.com.au>

	* modules/Fvwm{Icon{Man,Box},WinList}: Modified signal handling
	to use fvwmsignal.

1999-06-09  Bob Woodside  <proteus@pcnet.com>

	* fvwm/fvwm.c: Fixed the problem of windows wandering after a
	Restart from a page other than 0,0, followed by a Recapture.
	* fvwm/placement.c: Corrected my overzealous attempt to keep windows
	from switching desktops on Rastart/Recapture, which broke a couple
	of the StartsOnPage options.

1999-06-09  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c: increased item height by one pixel

1999-06-08  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c: Rewrote menu code so that MakeMenu is only called when
	menus are mapped. This should save quite some time when building
	dynamic menus. This used to call MakeMenu once for every new item.

	* fvwm/menus.c (MakeMenus): function no longer needed.

	* fvwm/fvwm.c (StartupStuff): no need to call MakeMenus any more

	* fvwm/windowlist.c (do_windowList): no need to call MakeMenu any more

	* libs/Bindings.c:
	* fvwm/fvwm.c: Applied update to strokes patch

1999-06-08  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c: Implemented a 'MissingSubmenuFunc' to allow better
	dynamic configurability for dynamic menus. This makes it possible to
	implement a file browser creating submenus on the fly.

	* fvwm/menus.c (size_menu_horizontally): fixed bug in placement of
	 '>' submenu triangle with long titles

1999-06-07  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (mr_popup_for_mi): use PeekToken instead of GetNextToken

	* fvwm/move_resize.c (DoSnapAttract): fixed 'shaking windows' when
	using SnapGrid bug
