@@ -1071,9 +1071,7 @@ void DrawLinePattern(Window win,
 void SetupFrame(FvwmWindow *tmp_win,int x,int y,int w,int h,Bool sendEvent,
 		Bool curr_shading)
 {
-#ifdef FVWM_DEBUG_MSGS
   XEvent client_event;
-#endif
   XWindowChanges frame_wc, xwc;
   unsigned long frame_mask, xwcm;
   int cx,cy,i;
@@ -1292,7 +1290,7 @@ void SetupFrame(FvwmWindow *tmp_win,int x,int y,int w,int h,Bool sendEvent,
     }
   }
 #endif /* SHAPE */
-#if 0
+
   XSync(dpy,0);
   if (sendEvent && !shaded)
   {
@@ -1319,7 +1317,7 @@ void SetupFrame(FvwmWindow *tmp_win,int x,int y,int w,int h,Bool sendEvent,
              client_event.xconfigure.width,client_event.xconfigure.height);
 #endif
   }
-#endif
+
   XSync(dpy,0);
 
   BroadcastConfig(M_CONFIGURE_WINDOW,tmp_win);
